[package]
name = "draw"
license = "MIT"
version = "0.3.0"
edition = "2018"
readme = "README.md"
authors = ["Ryan Ragona <ryan@ragona.com>"]
repository = "https://github.com/ragona/draw"
description = "A small 2D drawing library"
documentation = "https://docs.rs/draw"

[dependencies]
rgb = "0.8"
svg = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
cgmath = "0.18"
